k8/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: commits-deployment
spec:
  selector:
    matchLabels:
      app: commits-service
  template:
    metadata:
      labels:
        app: commits-service
      name: commits-service
    spec:
      containers:
        - name: commits
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_commits:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: issues-deployment
spec:
  selector:
    matchLabels:
      app: issues-service
  template:
    metadata:
      labels:
        app: issues-service
      name: issues-service
    spec:
      containers:
        - name: issues
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_issues:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: pulls-deployment
spec:
  selector:
    matchLabels:
      app: pulls-service
  template:
    metadata:
      labels:
        app: pulls-service
      name: pulls-service
    spec:
      containers:
        - name: pulls
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_pulls:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: repos-deployment
spec:
  selector:
    matchLabels:
      app: repos-service
  template:
    metadata:
      labels:
        app: repos-service
      name: repos-service
    spec:
      containers:
        - name: repos
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_repos:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: schedule-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-service
  template:
    metadata:
      labels:
        app: schedule-service
      name: schedule-service
    spec:
      containers:
        - name: repos
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_schedule:latest
