k8/commits.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: commits-deployment
spec:
  selector:
    matchLabels:
      app: commits-service
  template:
    metadata:
      labels:
        app: commits-service
      name: commits-service
    spec:
      containers:
        - name: commits
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_commits:latest
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: commits-service
spec:
  selector:
    app: commits-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: NodePort
