k8/issues.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: issues-deployment
spec:
  selector:
    matchLabels:
      app: issues-service
  template:
    metadata:
      labels:
        app: issues-service
      name: issues-service
    spec:
      containers:
        - name: issues
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_issues:latest
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: issues-service
spec:
  selector:
    app: issues-service
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
  type: NodePort
