k8/pulls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: pulls-deployment
spec:
  selector:
    matchLabels:
      app: pulls-service
  template:
    metadata:
      labels:
        app: pulls-service
      name: pulls-service
    spec:
      containers:
        - name: pulls
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_pulls:latest
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: pulls-service
spec:
  selector:
    app: pulls-service
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  type: NodePort
