k8/repos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: repos-deployment
spec:
  selector:
    matchLabels:
      app: repos-service
  template:
    metadata:
      labels:
        app: repos-service
      name: repos-service
    spec:
      containers:
        - name: repos
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_repos:latest
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: repos-service
spec:
  selector:
    app: repos-service
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
