k8/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: schedule-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-service
  template:
    metadata:
      labels:
        app: schedule-service
      name: schedule-service
    spec:
      containers:
        - name: repos
          image: 932055394976.dkr.ecr.ap-southeast-1.amazonaws.com/developer_iq_schedule:latest
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: schedule-service
spec:
  selector:
    app: schedule-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: NodePort
