k8/services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: commits-service
spec:
  selector:
    app: commits-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: issues-service
spec:
  selector:
    app: issues-service
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: pulls-service
spec:
  selector:
    app: pulls-service
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: repos-service
spec:
  selector:
    app: repos-service
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: schedule-service
spec:
  selector:
    app: schedule-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  type: NodePort
